--- a/Modul2-CSS/excercises/exc2.css
+++ b/Modul2-CSS/excercises/exc2.css
@@ -10,7 +10,7 @@ p, body {
   font-size: 1.1rem;
 }
 a {
-    font-family: Tahoma;
+    font-family: 'Special Elite';
     font-size: 1.2rem;
     font-weight: bold;
     text-decoration: none;
