--- a/Modul2-CSS/assignment1-cv/assignment1.css
+++ b/Modul2-CSS/assignment1-cv/assignment1.css
@@ -2,20 +2,28 @@ body {
     font-family: 'Montserrat';
     color: black;
     width: 800px;
+    margin: auto;
     padding: 0; 
     background-image: url("bilder/bakgrund.jpeg");
     background-color: white;
 }
+img {
+    display: block;
+    margin: auto;
+}
 
 .center {
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
     width: 60%;
     border: 3px solid rgb(175, 72, 98);
     padding: 10px;
 }
 div {
+    display: block;
     border: 2px solid rgba(245, 126, 126, 0.295);
-    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
     border-radius: 25px;
     background-color: white;
     padding: 10px;   
@@ -26,14 +34,17 @@ h1 {
     font-weight: bold;
     font-size:2rem;
     color:rgb(60, 15, 102);
+    text-align: center;
 }
-h2, h3 {
-    border-bottom-style: solid; 
+h2 {
+    border-bottom-style: solid;
     border-bottom-color: rgb(245, 126, 126);
 }
 h3 {
     font-style: italic;
     color: rgba(110, 88, 88, 0.616);
+    border-bottom-style: solid;
+    border-bottom-color: rgba(245, 126, 126, 0.199);
 }
 p, ul a:link {
     text-decoration: none;
