New commit. Changes in layout on thumbnails, addition of footer.

--- a/a-inlämningar/assignment3/startbootstrap-creative-gh-pages/startbootstrap-creative-gh-pages/css/creative.css
+++ b/a-inlämningar/assignment3/startbootstrap-creative-gh-pages/startbootstrap-creative-gh-pages/css/creative.css
@@ -223,6 +223,12 @@ header.masthead p {
   max-width: 400px;
 }
 
+#post-portfolio {
+  text-align:left; 
+  margin-left:none; 
+  margin-right:none
+}
+
 .portfolio-box {
   position: relative;
   display: block;
